<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about_license">Dicer is licensed under GNU GPLv3.</string>
    <string name="about_link">&lt;a href=https://github.com/kas70/Dicer>website&lt;/a></string>
    <string name="about_more">For more information: %s</string>
    <string name="about_version">Dicer Version %1$s (%2$d)</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Dicer</string>
    <string name="button_hide">hide</string>
    <string name="button_roll">roll</string>
    <string name="button_show">show</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_close">Exit</string>
    <string name="pref_about">About</string>
    <string name="pref_numberofdies_one">1 Die</string>
    <string name="pref_numberofdies_summary">Choose between one and two dies</string>
    <string name="pref_numberofdies_title">Number of Dies</string>
    <string name="pref_numberofdies_two">2 Dies</string>
    <string name="pref_shaketoroll_summary">Shake device to roll dice.</string>
    <string name="pref_shaketoroll_title">Shake to roll</string>
    <string name="pref_vibrate_summary">Vibrate on touching dice</string>
    <string name="pref_vibrate_title">Vibrate</string>
    <string name="settings">Settings</string>
</resources>
